--- a/scripts/indexation.ipynb
+++ b/scripts/indexation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
     "import os\n",
     "\n",
     "# Définir le chemin du fichier PDF\n",
-    "pdf_path = r\"C:\\Users\\marti\\Desktop\\dataof\\MRCITO_LLM\\data\\programme_mrc.pdf\"\n",
+    "pdf_path = r\"C:\\Users\\marti\\Desktop\\dataof\\MRCITO_LLM\\data\\equinox.pdf\"\n",
     "\n",
     "# Vérifier si le fichier existe\n",
     "if not os.path.exists(pdf_path):\n",
